fixed more styling issues with content spillage

--- a/project_src/frontend/src/components/SongAlbumList/SongAlbumList.css
+++ b/project_src/frontend/src/components/SongAlbumList/SongAlbumList.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
-    width: 720px;
+    width: fit-content;
     height: 300px;
     margin-top: 20px;
     margin-bottom: 20px;
