--- a/project_src/frontend/src/components/SongCard/SongCard.css
+++ b/project_src/frontend/src/components/SongCard/SongCard.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 200px;
+    width: fit-content;
     height: 210px;
 
     margin:10px;
